Added Transition effect when opening graph

--- a/D3-Practice/Histogram.html
+++ b/D3-Practice/Histogram.html
@@ -55,6 +55,8 @@ d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_data
         .attr("x", 1)
         .attr("transform", function(d) { return "translate(" + x(d.x0) + "," + y(d.length) + ")"; })
         .attr("width", function(d) { return x(d.x1) - x(d.x0) -1 ; })
+        .transition().delay(function (d, i) { return i * 100})
+        .duration(2000)
         .attr("height", function(d) { return height - y(d.length); })
         .style("fill", "#69b3a2")
 
